err/jobber.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jobber'...
Compiling './lib/python3.5/site-packages/Jobber/DRMAAJobExecuter.py'...
***   File "./lib/python3.5/site-packages/Jobber/DRMAAJobExecuter.py", line 88
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Jobber/Executer.py'...
***   File "./lib/python3.5/site-packages/Jobber/Executer.py", line 67
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Jobber/JobController.py'...
***   File "./lib/python3.5/site-packages/Jobber/JobController.py", line 200
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Jobber/JobExecuter.py'...
***   File "./lib/python3.5/site-packages/Jobber/JobExecuter.py", line 96
    os.chmod(logDir+"/command.sh", 0777)
                                      ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/Jobber/database'...
Listing './lib/python3.5/site-packages/Jobber/web'...
Compiling './lib/python3.5/site-packages/Jobber/web/draw_graph.py'...
***   File "./lib/python3.5/site-packages/Jobber/web/draw_graph.py", line 10
    print d['status'], d['name'], d['is_group_job']
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Jobber/web/static'...
Listing './lib/python3.5/site-packages/Jobber/web/static/css'...
Listing './lib/python3.5/site-packages/Jobber/web/static/fonts'...
Listing './lib/python3.5/site-packages/Jobber/web/static/images'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/cookie'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/editable'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/export'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/filter'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/filter-control'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/flat-json'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/key-events'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/mobile'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/natural-sorting'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/reorder-columns'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/reorder-rows'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/resizable'...
Listing './lib/python3.5/site-packages/Jobber/web/static/js/extensions/toolbar'...
Listing './lib/python3.5/site-packages/Jobber/web/templates'...
Listing './lib/python3.5/site-packages/Jobber-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
